src/theme-reset.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --color-text: #fcf5e6;
  --color-text-alt: #fcf5e6b0;
  --color-background: #171f1f;
  --color-background-alt: #232f2f;
  --color-background-rgb: 6, 14, 14;

  --color-primary: #ff3366;
  --color-primary-alt: #fa527c;
  --color-primary-rgb: 255, 51, 102;
  --color-secondary: #f4c95d;
  --color-secondary-alt: #f0cc71;
  --color-tertiary: #4ED0CE;
  --color-success: #85C791;
  --color-failure: #ff3366;

  --gradient-primary-secondary: linear-gradient(125deg, var(--color-primary) -20%, var(--color-secondary) 100%);

  --shadow-1: 0px 0px 10px rgba(0, 0, 0, 0.3);

  --mobile-breakpoint: 1000px;
}

/* ICONS */

i.pi {
  font-family: inherit;
  position: relative;
  font-size: inherit;
}

i.pi::before {
  font-family: "primeicons";
  font-style: normal;
  font-weight: normal;
}

/* SIDEBAR */

.p-sidebar {
  background: var(--color-background-alt);
  border: none;
}

.p-sidebar-left.p-sidebar-md,
.p-sidebar-right.p-sidebar-md {
  width: 150px;
}

.p-sidebar-left.p-sidebar-sm,
.p-sidebar-right.p-sidebar-sm {
  width: 70px;
}

.p-sidebar .p-sidebar-header {
  padding: 10px;
  padding-bottom: 0px;
  /* padding-bottom: 15px; */
  justify-content: flex-start;
}

.p-sidebar .p-sidebar-content {
  padding: 10px;
  height: 100%;
}

.p-sidebar-mask {
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
}

/* CARD */

.p-card {
  background: var(--color-background-alt);
  border: none;
  border-radius: 16px;
}

.p-card .p-card-footer {
  padding: 0;
}


/* TEXT INPUTS */

.p-inputtext {
  color: var(--color-text);
  background: var(--color-background);
  border-color: var(--color-background-alt);
  padding-top: 14px;
}

.p-inputtext:enabled:hover {
  border-color: var(--color-primary);
}

.p-inputtext:enabled:focus {
  box-shadow: 0 0 0 2px #fff2;
  border-color: var(--color-primary-alt);
}

.p-inputtextarea {
  box-sizing: border-box;
  padding: 19px 12px;
}

/* MULTISELECT INPUT */

.p-multiselect {
  color: var(--color-text);
  background: var(--color-background);
  border-color: var(--color-background-alt);
  padding-top: 3px;
  padding-bottom: 2px;
  max-width: 100%;
}

.p-multiselect:not(.p-disabled):hover {
  border-color: var(--color-primary);
}

.p-multiselect.p-multiselect-chip .p-multiselect-token {
  background: var(--color-background-alt);
  color: var(--color-text);
}

.p-multiselect-panel {
  background: var(--color-background-alt);
  border: none;
}

.p-multiselect-panel .p-multiselect-header {
  background: var(--color-background-alt);
  border-color: var(--color-background);
  color: var(--color-text);
}

.p-multiselect-panel .p-multiselect-items {
  padding: 0;
}

.p-multiselect-panel .p-multiselect-items .p-multiselect-item.p-highlight {
  background: rgba(var(--color-primary-rgb), .3);
  color: var(--color-text);
}

.p-multiselect-panel .p-multiselect-items .p-multiselect-item:focus {
  box-shadow: inset 0 0 0 0.15rem #eee3;
}

/* CHECKBOX */

.p-checkbox .p-checkbox-box {
  background: var(--color-background);
  border-color: var(--color-background-alt);
}

.p-checkbox:not(.p-checkbox-disabled) .p-checkbox-box:hover {
  border-color: var(--color-primary);
}

.p-checkbox .p-checkbox-box.p-highlight {
  background: var(--color-primary);
  border-color: var(--color-primary);
  color: var(--color-background);
}

.p-checkbox:not(.p-checkbox-disabled) .p-checkbox-box.p-highlight:hover {
  background: var(--color-primary-alt);
  border-color: var(--color-primary-alt);
  color: var(--color-background);
}

.p-checkbox .p-checkbox-box .p-checkbox-icon {
  padding: 1px;
}

.p-hidden-accessible {
  display: none;
}

/* BUTTONS */

.p-buttonset {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 25px;
}

.p-button {
  color: var(--color-background);
  background: var(--color-primary);
  border-color: var(--color-primary);
  cursor: pointer;
  padding-top: 15px;
}

.p-button:focus {
  box-shadow: 0 0 0 2px #fff2;
}

.p-button:enabled:hover {
  background: var(--color-primary-alt);
  border-color: var(--color-primary-alt);
}

.p-button.p-button-icon-only {
  text-align: center;
  padding: 0;
  padding-top: 3px;
  padding-right: 1px;
}

.p-button.p-button-icon-only.p-button-sm {
  width: 2rem;
  height: 2rem;
  padding-top: 1px;
  padding-left: 1px;
  padding-right: 2px;
  line-height: 2rem;
}

.p-button.p-button-icon-only>.p-button-label {
  display: none;
  width: 0;
}

.p-button.p-button-text {
  color: var(--color-primary);
}

.p-button.p-button-text:enabled:hover {
  color: var(--color-primary-alt);
  background: rgba(var(--color-primary-rgb), 0.15);
}

.p-button.p-button-outlined {
  border-color: var(--color-primary);
  color: var(--color-primary);
}

.p-button.p-button-outlined:enabled:hover {
  /* border-color: var(--color-primary-alt); */
  color: var(--color-primary-alt);
}

.p-button.p-button-outlined:enabled:active {
  background: rgba(var(--color-primary-rgb), 0.15);
  border-color: var(--color-primary-alt);
  color: var(--color-primary-alt);
}

.p-button.p-button-gradient {
  background: var(--gradient-primary-secondary);
  border: none;
}

.p-button.p-button-gradient:enabled:hover {
  background: var(--gradient-primary-secondary);
  filter: brightness(110%);
  transition: filter 0.1s ease-in-out;
}

/* SPLITTER */
.p-splitter {
  background: transparent;
  border-color: transparent;
  border-radius: 12px;
}

.p-splitter .p-splitter-gutter {
  background: var(--color-background-alt);
  border-radius: 3px;
  width: 3px;
}

.p-splitter .p-splitter-gutter .p-splitter-gutter-handle {
  background: #ffffff1a;
  border-radius: 4px;
}

/* TAB VIEW */
.p-tabview .p-tabview-panels {
  background: transparent;
  color: inherit;
  padding: 0;
  padding-top: 10px;
}

.p-tabview .p-tabview-nav {
  border: none;
}

.p-tabview .p-tabview-nav li .p-tabview-nav-link {
  background: var(--color-background-alt);
  color: var(--color-text-alt);
  border: 1px solid transparent;
  overflow: hidden;
  margin: 0;
  margin-right: 12px;
  padding: 12px;
  border-radius: 20px;
  font-size: 14px;
  transition: .1s ease-in-out;
  box-shadow: var(--shadow-1);
}

.p-tabview .p-tabview-nav li.p-highlight .p-tabview-nav-link {
  background: var(--color-background-alt);
  color: var(--color-primary);
  border-color: var(--color-primary);
}

.p-tabview .p-tabview-nav li:not(.p-highlight):not(.p-disabled):hover .p-tabview-nav-link {
  border-color: var(--color-text-alt);
  background: var(--color-background-alt);
  color: inherit;
}

.p-tabview .p-tabview-nav li .p-tabview-nav-link:not(.p-disabled):focus {
  border-color: var(--color-primary);
  color: var(--color-primary);
  box-shadow: none;
}

/* TIMELINE */

.p-timeline.p-timeline-horizontal .p-timeline-event-opposite,
.p-timeline.p-timeline-horizontal .p-timeline-event-content {
  padding: 0;
}

.p-timeline .p-timeline-event-marker {
  background: transparent;
  border-color: inherit;
}

.p-timeline .p-timeline-event-connector {
  height: 0px;
  border: 1px solid var(--color-background);
  border-color: inherit;
  background: none;
}

/* DATA TABLE */

.p-datatable .p-datatable-thead>tr>th {
  border-color: var(--color-background-alt);
  background: none;
  width: 0;
  padding-left: 0;
  padding-right: 4px;
}

.p-datatable .p-datatable-tbody>tr {
  background: none;
  border-bottom: 1px solid var(--color-background-alt);
}

.p-datatable .p-datatable-tbody>tr>td {
  border-color: var(--color-background-alt);
  padding: 0;
  padding-right: 4px;
  border: 0;
  /* max-width: 0px; */
}

.p-datatable .p-datatable-tbody>tr>td.no-width {
  max-width: 0;
}

